@@ -59,6 +59,7 @@
       <entry name="*.tbl" />
       <entry name="*.json" />
       <entry name="*.fnt" />
+      <entry name="*.txt" />
     </wildcardResourcePatterns>
     <annotationProcessing>
       <profile default="true" name="Default" enabled="false">
